--- a/src/Pingalot/Properties/launchSettings.json
+++ b/src/Pingalot/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PingStats": {
       "commandName": "Project",
-      "commandLineArgs": "-t --layout 2 --export test.csv 1.1.1.1"
+      "commandLineArgs": "-t --layout 2 --export test.csv --label QRO<>DFW 1.1.1.1"
     }
   }
 }
